// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`apmUiEnabled 1`] = `
<EuiPanel
  paddingSize="l"
>
  <EuiFlexGroup
    className="homeAddData__flexGroup homAddData__flexTablet"
    gutterSize="l"
    justifyContent="spaceAround"
    responsive={false}
    wrap={true}
  >
    <EuiFlexItem
      className="homAddData__cardDivider"
    >
      <EuiSpacer
        size="m"
      />
      <EuiFlexGroup
        justifyContent="spaceAround"
        responsive={false}
      >
        <EuiFlexItem
          grow={false}
        >
          <EuiFlexGroup
            alignItems="center"
            gutterSize="m"
            responsive={false}
          >
            <EuiFlexItem
              grow={false}
            >
              <EuiIcon
                size="xxl"
                type="logoObservability"
              />
            </EuiFlexItem>
            <EuiFlexItem
              grow={false}
            >
              <EuiTitle
                size="s"
              >
                <h2>
                  <FormattedMessage
                    defaultMessage="Observability"
                    id="kbn.home.addData.title.observability"
                    values={Object {}}
                  />
                </h2>
              </EuiTitle>
            </EuiFlexItem>
          </EuiFlexGroup>
        </EuiFlexItem>
      </EuiFlexGroup>
      <EuiSpacer />
      <EuiFlexGroup
        className="homeAddData__flexGroup"
        gutterSize="l"
        justifyContent="spaceAround"
        responsive={false}
        wrap={true}
      >
        <EuiFlexItem
          grow={false}
        >
          <EuiCard
            className="homAddData__card"
            description={
              <span
                id="aria-describedby.addAmpButtonLabel"
              >
                APM automatically collects in-depth performance metrics and errors from inside your applications.
              </span>
            }
            footer={
              <EuiButton
                aria-describedby="aria-describedby.addAmpButtonLabel"
                className="homAddData__button"
                href="#/home/tutorial/apm"
              >
                <FormattedMessage
                  defaultMessage="Add APM"
                  id="kbn.home.addData.apm.addApmButtonLabel"
                  values={Object {}}
                />
              </EuiButton>
            }
            title="APM"
            titleSize="xs"
          />
        </EuiFlexItem>
        <EuiFlexItem
          grow={false}
        >
          <EuiCard
            className="homAddData__card"
            description={
              <span
                id="aria-describedby.addLogDataButtonLabel"
              >
                Ingest logs from popular data sources and easily visualize in preconfigured dashboards.
              </span>
            }
            footer={
              <EuiButton
                aria-describedby="aria-describedby.addLogDataButtonLabel"
                className="homAddData__button"
                href="#/home/tutorial_directory/logging"
              >
                <FormattedMessage
                  defaultMessage="Add log data"
                  id="kbn.home.addData.logging.addLogDataButtonLabel"
                  values={Object {}}
                />
              </EuiButton>
            }
            title="Logs"
            titleSize="xs"
          />
        </EuiFlexItem>
        <EuiFlexItem
          grow={false}
        >
          <EuiCard
            className="homAddData__card"
            description={
              <span
                id="aria-describedby.addMetricsButtonLabel"
              >
                Collect metrics from the operating system and services running on your servers.
              </span>
            }
            footer={
              <EuiButton
                aria-describedby="aria-describedby.addMetricsButtonLabel"
                className="homAddData__button"
                href="#/home/tutorial_directory/metrics"
              >
                <FormattedMessage
                  defaultMessage="Add metric data"
                  id="kbn.home.addData.metrics.addMetricsDataButtonLabel"
                  values={Object {}}
                />
              </EuiButton>
            }
            title="Metrics"
            titleSize="xs"
          />
        </EuiFlexItem>
      </EuiFlexGroup>
    </EuiFlexItem>
    <EuiFlexItem
      grow={false}
    >
      <EuiFlexGroup
        justifyContent="spaceAround"
        responsive={false}
      >
        <EuiFlexItem
          grow={false}
        >
          <EuiFlexGroup
            alignItems="center"
            gutterSize="m"
            responsive={false}
          >
            <EuiFlexItem
              grow={false}
            >
              <EuiIcon
                size="xxl"
                type="logoSecurity"
              />
            </EuiFlexItem>
            <EuiFlexItem
              grow={false}
            >
              <EuiTitle
                size="s"
              >
                <h2>
                  <FormattedMessage
                    defaultMessage="Security"
                    id="kbn.home.addData.title.security"
                    values={Object {}}
                  />
                </h2>
              </EuiTitle>
            </EuiFlexItem>
          </EuiFlexGroup>
        </EuiFlexItem>
      </EuiFlexGroup>
      <EuiSpacer
        size="s"
      />
      <EuiCard
        className="homAddData__card"
        description={
          <span
            id="aria-describedby.addSiemButtonLabel"
          >
            Centralize security events for interactive investigation in ready-to-go visualizations.
          </span>
        }
        footer={
          <EuiButton
            aria-describedby="aria-describedby.addSiemButtonLabel"
            className="homAddData__button"
            href="#/home/tutorial_directory/siem"
          >
            <FormattedMessage
              defaultMessage="Add events"
              id="kbn.home.addData.siem.addSiemEventsButtonLabel"
              values={Object {}}
            />
          </EuiButton>
        }
        title="SIEM"
        titleSize="xs"
      />
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiHorizontalRule />
  <EuiFlexGrid
    columns={2}
  >
    <EuiFlexItem
      className="homAddData__footerItem"
    >
      <EuiText
        size="s"
      >
        <strong
          style={
            Object {
              "height": 38,
            }
          }
        >
          <FormattedMessage
            defaultMessage="Add sample data"
            id="kbn.home.addData.sampleDataTitle"
            values={Object {}}
          />
        </strong>
        <EuiLink
          href="#/home/tutorial_directory/sampleData"
          style={
            Object {
              "display": "block",
              "textAlign": "center",
            }
          }
        >
          <FormattedMessage
            defaultMessage="Load a data set and a Kibana dashboard"
            id="kbn.home.addData.sampleDataLink"
            values={Object {}}
          />
        </EuiLink>
      </EuiText>
    </EuiFlexItem>
    <EuiFlexItem
      className="homAddData__footerItem"
    >
      <EuiText
        size="s"
      >
        <strong
          style={
            Object {
              "height": 38,
            }
          }
        >
          <FormattedMessage
            defaultMessage="Use Elasticsearch data"
            id="kbn.home.addData.yourDataTitle"
            values={Object {}}
          />
        </strong>
        <EuiLink
          href="#/management/kibana/index_pattern"
          style={
            Object {
              "display": "block",
              "textAlign": "center",
            }
          }
        >
          <FormattedMessage
            defaultMessage="Connect to your Elasticsearch index"
            id="kbn.home.addData.yourDataLink"
            values={Object {}}
          />
        </EuiLink>
      </EuiText>
    </EuiFlexItem>
  </EuiFlexGrid>
</EuiPanel>
`;

exports[`isNewKibanaInstance 1`] = `
<EuiPanel
  paddingSize="l"
>
  <EuiFlexGroup
    className="homeAddData__flexGroup homAddData__flexTablet"
    gutterSize="l"
    justifyContent="spaceAround"
    responsive={false}
    wrap={false}
  >
    <EuiFlexItem
      className="homAddData__cardDivider"
    >
      <EuiSpacer
        size="m"
      />
      <EuiFlexGroup
        justifyContent="spaceAround"
        responsive={false}
      >
        <EuiFlexItem
          grow={false}
        >
          <EuiFlexGroup
            alignItems="center"
            gutterSize="m"
            responsive={false}
          >
            <EuiFlexItem
              grow={false}
            >
              <EuiIcon
                size="xxl"
                type="logoObservability"
              />
            </EuiFlexItem>
            <EuiFlexItem
              grow={false}
            >
              <EuiTitle
                size="s"
              >
                <h2>
                  <FormattedMessage
                    defaultMessage="Observability"
                    id="kbn.home.addData.title.observability"
                    values={Object {}}
                  />
                </h2>
              </EuiTitle>
            </EuiFlexItem>
          </EuiFlexGroup>
        </EuiFlexItem>
      </EuiFlexGroup>
      <EuiSpacer />
      <EuiFlexGroup
        className="homeAddData__flexGroup"
        gutterSize="l"
        justifyContent="spaceAround"
        responsive={false}
        wrap={false}
      >
        <EuiFlexItem
          grow={false}
        >
          <EuiCard
            className="homAddData__card"
            description={
              <span
                id="aria-describedby.addLogDataButtonLabel"
              >
                Ingest logs from popular data sources and easily visualize in preconfigured dashboards.
              </span>
            }
            footer={
              <EuiButton
                aria-describedby="aria-describedby.addLogDataButtonLabel"
                className="homAddData__button"
                href="#/home/tutorial_directory/logging"
              >
                <FormattedMessage
                  defaultMessage="Add log data"
                  id="kbn.home.addData.logging.addLogDataButtonLabel"
                  values={Object {}}
                />
              </EuiButton>
            }
            title="Logs"
            titleSize="xs"
          />
        </EuiFlexItem>
        <EuiFlexItem
          grow={false}
        >
          <EuiCard
            className="homAddData__card"
            description={
              <span
                id="aria-describedby.addMetricsButtonLabel"
              >
                Collect metrics from the operating system and services running on your servers.
              </span>
            }
            footer={
              <EuiButton
                aria-describedby="aria-describedby.addMetricsButtonLabel"
                className="homAddData__button"
                href="#/home/tutorial_directory/metrics"
              >
                <FormattedMessage
                  defaultMessage="Add metric data"
                  id="kbn.home.addData.metrics.addMetricsDataButtonLabel"
                  values={Object {}}
                />
              </EuiButton>
            }
            title="Metrics"
            titleSize="xs"
          />
        </EuiFlexItem>
      </EuiFlexGroup>
    </EuiFlexItem>
    <EuiFlexItem
      grow={false}
    >
      <EuiFlexGroup
        justifyContent="spaceAround"
        responsive={false}
      >
        <EuiFlexItem
          grow={false}
        >
          <EuiFlexGroup
            alignItems="center"
            gutterSize="m"
            responsive={false}
          >
            <EuiFlexItem
              grow={false}
            >
              <EuiIcon
                size="xxl"
                type="logoSecurity"
              />
            </EuiFlexItem>
            <EuiFlexItem
              grow={false}
            >
              <EuiTitle
                size="s"
              >
                <h2>
                  <FormattedMessage
                    defaultMessage="Security"
                    id="kbn.home.addData.title.security"
                    values={Object {}}
                  />
                </h2>
              </EuiTitle>
            </EuiFlexItem>
          </EuiFlexGroup>
        </EuiFlexItem>
      </EuiFlexGroup>
      <EuiSpacer
        size="s"
      />
      <EuiCard
        className="homAddData__card"
        description={
          <span
            id="aria-describedby.addSiemButtonLabel"
          >
            Centralize security events for interactive investigation in ready-to-go visualizations.
          </span>
        }
        footer={
          <EuiButton
            aria-describedby="aria-describedby.addSiemButtonLabel"
            className="homAddData__button"
            href="#/home/tutorial_directory/siem"
          >
            <FormattedMessage
              defaultMessage="Add events"
              id="kbn.home.addData.siem.addSiemEventsButtonLabel"
              values={Object {}}
            />
          </EuiButton>
        }
        title="SIEM"
        titleSize="xs"
      />
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiHorizontalRule />
  <EuiFlexGrid
    columns={2}
  >
    <EuiFlexItem
      className="homAddData__footerItem homAddData__footerItem--highlight"
    >
      <EuiText
        size="s"
      >
        <strong
          style={
            Object {
              "height": 38,
            }
          }
        >
          <FormattedMessage
            defaultMessage="Add sample data"
            id="kbn.home.addData.sampleDataTitle"
            values={Object {}}
          />
        </strong>
        <EuiLink
          href="#/home/tutorial_directory/sampleData"
          style={
            Object {
              "display": "block",
              "textAlign": "center",
            }
          }
        >
          <FormattedMessage
            defaultMessage="Load a data set and a Kibana dashboard"
            id="kbn.home.addData.sampleDataLink"
            values={Object {}}
          />
        </EuiLink>
      </EuiText>
    </EuiFlexItem>
    <EuiFlexItem
      className="homAddData__footerItem homAddData__footerItem--highlight"
    >
      <EuiText
        size="s"
      >
        <strong
          style={
            Object {
              "height": 38,
            }
          }
        >
          <FormattedMessage
            defaultMessage="Use Elasticsearch data"
            id="kbn.home.addData.yourDataTitle"
            values={Object {}}
          />
        </strong>
        <EuiLink
          href="#/management/kibana/index_pattern"
          style={
            Object {
              "display": "block",
              "textAlign": "center",
            }
          }
        >
          <FormattedMessage
            defaultMessage="Connect to your Elasticsearch index"
            id="kbn.home.addData.yourDataLink"
            values={Object {}}
          />
        </EuiLink>
      </EuiText>
    </EuiFlexItem>
  </EuiFlexGrid>
</EuiPanel>
`;

exports[`mlEnabled 1`] = `
<EuiPanel
  paddingSize="l"
>
  <EuiFlexGroup
    className="homeAddData__flexGroup homAddData__flexTablet"
    gutterSize="l"
    justifyContent="spaceAround"
    responsive={false}
    wrap={true}
  >
    <EuiFlexItem
      className="homAddData__cardDivider"
    >
      <EuiSpacer
        size="m"
      />
      <EuiFlexGroup
        justifyContent="spaceAround"
        responsive={false}
      >
        <EuiFlexItem
          grow={false}
        >
          <EuiFlexGroup
            alignItems="center"
            gutterSize="m"
            responsive={false}
          >
            <EuiFlexItem
              grow={false}
            >
              <EuiIcon
                size="xxl"
                type="logoObservability"
              />
            </EuiFlexItem>
            <EuiFlexItem
              grow={false}
            >
              <EuiTitle
                size="s"
              >
                <h2>
                  <FormattedMessage
                    defaultMessage="Observability"
                    id="kbn.home.addData.title.observability"
                    values={Object {}}
                  />
                </h2>
              </EuiTitle>
            </EuiFlexItem>
          </EuiFlexGroup>
        </EuiFlexItem>
      </EuiFlexGroup>
      <EuiSpacer />
      <EuiFlexGroup
        className="homeAddData__flexGroup"
        gutterSize="l"
        justifyContent="spaceAround"
        responsive={false}
        wrap={true}
      >
        <EuiFlexItem
          grow={false}
        >
          <EuiCard
            className="homAddData__card"
            description={
              <span
                id="aria-describedby.addAmpButtonLabel"
              >
                APM automatically collects in-depth performance metrics and errors from inside your applications.
              </span>
            }
            footer={
              <EuiButton
                aria-describedby="aria-describedby.addAmpButtonLabel"
                className="homAddData__button"
                href="#/home/tutorial/apm"
              >
                <FormattedMessage
                  defaultMessage="Add APM"
                  id="kbn.home.addData.apm.addApmButtonLabel"
                  values={Object {}}
                />
              </EuiButton>
            }
            title="APM"
            titleSize="xs"
          />
        </EuiFlexItem>
        <EuiFlexItem
          grow={false}
        >
          <EuiCard
            className="homAddData__card"
            description={
              <span
                id="aria-describedby.addLogDataButtonLabel"
              >
                Ingest logs from popular data sources and easily visualize in preconfigured dashboards.
              </span>
            }
            footer={
              <EuiButton
                aria-describedby="aria-describedby.addLogDataButtonLabel"
                className="homAddData__button"
                href="#/home/tutorial_directory/logging"
              >
                <FormattedMessage
                  defaultMessage="Add log data"
                  id="kbn.home.addData.logging.addLogDataButtonLabel"
                  values={Object {}}
                />
              </EuiButton>
            }
            title="Logs"
            titleSize="xs"
          />
        </EuiFlexItem>
        <EuiFlexItem
          grow={false}
        >
          <EuiCard
            className="homAddData__card"
            description={
              <span
                id="aria-describedby.addMetricsButtonLabel"
              >
                Collect metrics from the operating system and services running on your servers.
              </span>
            }
            footer={
              <EuiButton
                aria-describedby="aria-describedby.addMetricsButtonLabel"
                className="homAddData__button"
                href="#/home/tutorial_directory/metrics"
              >
                <FormattedMessage
                  defaultMessage="Add metric data"
                  id="kbn.home.addData.metrics.addMetricsDataButtonLabel"
                  values={Object {}}
                />
              </EuiButton>
            }
            title="Metrics"
            titleSize="xs"
          />
        </EuiFlexItem>
      </EuiFlexGroup>
    </EuiFlexItem>
    <EuiFlexItem
      grow={false}
    >
      <EuiFlexGroup
        justifyContent="spaceAround"
        responsive={false}
      >
        <EuiFlexItem
          grow={false}
        >
          <EuiFlexGroup
            alignItems="center"
            gutterSize="m"
            responsive={false}
          >
            <EuiFlexItem
              grow={false}
            >
              <EuiIcon
                size="xxl"
                type="logoSecurity"
              />
            </EuiFlexItem>
            <EuiFlexItem
              grow={false}
            >
              <EuiTitle
                size="s"
              >
                <h2>
                  <FormattedMessage
                    defaultMessage="Security"
                    id="kbn.home.addData.title.security"
                    values={Object {}}
                  />
                </h2>
              </EuiTitle>
            </EuiFlexItem>
          </EuiFlexGroup>
        </EuiFlexItem>
      </EuiFlexGroup>
      <EuiSpacer
        size="s"
      />
      <EuiCard
        className="homAddData__card"
        description={
          <span
            id="aria-describedby.addSiemButtonLabel"
          >
            Centralize security events for interactive investigation in ready-to-go visualizations.
          </span>
        }
        footer={
          <EuiButton
            aria-describedby="aria-describedby.addSiemButtonLabel"
            className="homAddData__button"
            href="#/home/tutorial_directory/siem"
          >
            <FormattedMessage
              defaultMessage="Add events"
              id="kbn.home.addData.siem.addSiemEventsButtonLabel"
              values={Object {}}
            />
          </EuiButton>
        }
        title="SIEM"
        titleSize="xs"
      />
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiHorizontalRule />
  <EuiFlexGrid
    columns={3}
  >
    <EuiFlexItem
      className="homAddData__footerItem"
    >
      <EuiText
        size="s"
      >
        <strong
          style={
            Object {
              "height": 38,
            }
          }
        >
          <FormattedMessage
            defaultMessage="Add sample data"
            id="kbn.home.addData.sampleDataTitle"
            values={Object {}}
          />
        </strong>
        <EuiLink
          href="#/home/tutorial_directory/sampleData"
          style={
            Object {
              "display": "block",
              "textAlign": "center",
            }
          }
        >
          <FormattedMessage
            defaultMessage="Load a data set and a Kibana dashboard"
            id="kbn.home.addData.sampleDataLink"
            values={Object {}}
          />
        </EuiLink>
      </EuiText>
    </EuiFlexItem>
    <EuiFlexItem
      className="homAddData__footerItem"
    >
      <EuiText
        size="s"
      >
        <strong
          style={
            Object {
              "height": 38,
            }
          }
        >
          <FormattedMessage
            defaultMessage="Upload data from log file"
            id="kbn.home.addData.uploadFileTitle"
            values={Object {}}
          />
        </strong>
        <EuiLink
          href="path/app/ml#/filedatavisualizer"
          style={
            Object {
              "display": "block",
              "textAlign": "center",
            }
          }
        >
          <FormattedMessage
            defaultMessage="Import a CSV, NDJSON, or log file"
            id="kbn.home.addData.uploadFileLink"
            values={Object {}}
          />
        </EuiLink>
      </EuiText>
    </EuiFlexItem>
    <EuiFlexItem
      className="homAddData__footerItem"
    >
      <EuiText
        size="s"
      >
        <strong
          style={
            Object {
              "height": 38,
            }
          }
        >
          <FormattedMessage
            defaultMessage="Use Elasticsearch data"
            id="kbn.home.addData.yourDataTitle"
            values={Object {}}
          />
        </strong>
        <EuiLink
          href="#/management/kibana/index_pattern"
          style={
            Object {
              "display": "block",
              "textAlign": "center",
            }
          }
        >
          <FormattedMessage
            defaultMessage="Connect to your Elasticsearch index"
            id="kbn.home.addData.yourDataLink"
            values={Object {}}
          />
        </EuiLink>
      </EuiText>
    </EuiFlexItem>
  </EuiFlexGrid>
</EuiPanel>
`;

exports[`render 1`] = `
<EuiPanel
  paddingSize="l"
>
  <EuiFlexGroup
    className="homeAddData__flexGroup homAddData__flexTablet"
    gutterSize="l"
    justifyContent="spaceAround"
    responsive={false}
    wrap={false}
  >
    <EuiFlexItem
      className="homAddData__cardDivider"
    >
      <EuiSpacer
        size="m"
      />
      <EuiFlexGroup
        justifyContent="spaceAround"
        responsive={false}
      >
        <EuiFlexItem
          grow={false}
        >
          <EuiFlexGroup
            alignItems="center"
            gutterSize="m"
            responsive={false}
          >
            <EuiFlexItem
              grow={false}
            >
              <EuiIcon
                size="xxl"
                type="logoObservability"
              />
            </EuiFlexItem>
            <EuiFlexItem
              grow={false}
            >
              <EuiTitle
                size="s"
              >
                <h2>
                  <FormattedMessage
                    defaultMessage="Observability"
                    id="kbn.home.addData.title.observability"
                    values={Object {}}
                  />
                </h2>
              </EuiTitle>
            </EuiFlexItem>
          </EuiFlexGroup>
        </EuiFlexItem>
      </EuiFlexGroup>
      <EuiSpacer />
      <EuiFlexGroup
        className="homeAddData__flexGroup"
        gutterSize="l"
        justifyContent="spaceAround"
        responsive={false}
        wrap={false}
      >
        <EuiFlexItem
          grow={false}
        >
          <EuiCard
            className="homAddData__card"
            description={
              <span
                id="aria-describedby.addLogDataButtonLabel"
              >
                Ingest logs from popular data sources and easily visualize in preconfigured dashboards.
              </span>
            }
            footer={
              <EuiButton
                aria-describedby="aria-describedby.addLogDataButtonLabel"
                className="homAddData__button"
                href="#/home/tutorial_directory/logging"
              >
                <FormattedMessage
                  defaultMessage="Add log data"
                  id="kbn.home.addData.logging.addLogDataButtonLabel"
                  values={Object {}}
                />
              </EuiButton>
            }
            title="Logs"
            titleSize="xs"
          />
        </EuiFlexItem>
        <EuiFlexItem
          grow={false}
        >
          <EuiCard
            className="homAddData__card"
            description={
              <span
                id="aria-describedby.addMetricsButtonLabel"
              >
                Collect metrics from the operating system and services running on your servers.
              </span>
            }
            footer={
              <EuiButton
                aria-describedby="aria-describedby.addMetricsButtonLabel"
                className="homAddData__button"
                href="#/home/tutorial_directory/metrics"
              >
                <FormattedMessage
                  defaultMessage="Add metric data"
                  id="kbn.home.addData.metrics.addMetricsDataButtonLabel"
                  values={Object {}}
                />
              </EuiButton>
            }
            title="Metrics"
            titleSize="xs"
          />
        </EuiFlexItem>
      </EuiFlexGroup>
    </EuiFlexItem>
    <EuiFlexItem
      grow={false}
    >
      <EuiFlexGroup
        justifyContent="spaceAround"
        responsive={false}
      >
        <EuiFlexItem
          grow={false}
        >
          <EuiFlexGroup
            alignItems="center"
            gutterSize="m"
            responsive={false}
          >
            <EuiFlexItem
              grow={false}
            >
              <EuiIcon
                size="xxl"
                type="logoSecurity"
              />
            </EuiFlexItem>
            <EuiFlexItem
              grow={false}
            >
              <EuiTitle
                size="s"
              >
                <h2>
                  <FormattedMessage
                    defaultMessage="Security"
                    id="kbn.home.addData.title.security"
                    values={Object {}}
                  />
                </h2>
              </EuiTitle>
            </EuiFlexItem>
          </EuiFlexGroup>
        </EuiFlexItem>
      </EuiFlexGroup>
      <EuiSpacer
        size="s"
      />
      <EuiCard
        className="homAddData__card"
        description={
          <span
            id="aria-describedby.addSiemButtonLabel"
          >
            Centralize security events for interactive investigation in ready-to-go visualizations.
          </span>
        }
        footer={
          <EuiButton
            aria-describedby="aria-describedby.addSiemButtonLabel"
            className="homAddData__button"
            href="#/home/tutorial_directory/siem"
          >
            <FormattedMessage
              defaultMessage="Add events"
              id="kbn.home.addData.siem.addSiemEventsButtonLabel"
              values={Object {}}
            />
          </EuiButton>
        }
        title="SIEM"
        titleSize="xs"
      />
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiHorizontalRule />
  <EuiFlexGrid
    columns={2}
  >
    <EuiFlexItem
      className="homAddData__footerItem"
    >
      <EuiText
        size="s"
      >
        <strong
          style={
            Object {
              "height": 38,
            }
          }
        >
          <FormattedMessage
            defaultMessage="Add sample data"
            id="kbn.home.addData.sampleDataTitle"
            values={Object {}}
          />
        </strong>
        <EuiLink
          href="#/home/tutorial_directory/sampleData"
          style={
            Object {
              "display": "block",
              "textAlign": "center",
            }
          }
        >
          <FormattedMessage
            defaultMessage="Load a data set and a Kibana dashboard"
            id="kbn.home.addData.sampleDataLink"
            values={Object {}}
          />
        </EuiLink>
      </EuiText>
    </EuiFlexItem>
    <EuiFlexItem
      className="homAddData__footerItem"
    >
      <EuiText
        size="s"
      >
        <strong
          style={
            Object {
              "height": 38,
            }
          }
        >
          <FormattedMessage
            defaultMessage="Use Elasticsearch data"
            id="kbn.home.addData.yourDataTitle"
            values={Object {}}
          />
        </strong>
        <EuiLink
          href="#/management/kibana/index_pattern"
          style={
            Object {
              "display": "block",
              "textAlign": "center",
            }
          }
        >
          <FormattedMessage
            defaultMessage="Connect to your Elasticsearch index"
            id="kbn.home.addData.yourDataLink"
            values={Object {}}
          />
        </EuiLink>
      </EuiText>
    </EuiFlexItem>
  </EuiFlexGrid>
</EuiPanel>
`;
